methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:11: error: not found: value y
      return y
             ^