methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var x=isFacingWall()
  if(x==true){
        return false;
  }    
      if(getGroundColor!=Color.green){
        backward();
        var y=false
      }
      return y
      return x
    
}
        
        
        
     
      